chore: Update documentation, and add new screenshots.

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raindrop Importer</title>
+    <title>Raindrop.io Sync</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -13,7 +13,7 @@
         <header>
             <div class="brand">
                 <img src="icon.png" class="brand-icon" alt="Logo">
-                <span>Raindrop.io Importer</span>
+                <span>Raindrop.io Sync</span>
             </div>
             <button id="settingsToggle" class="settings-btn" title="Settings">
                 ⚙️
@@ -84,8 +84,8 @@
         <footer>
             <p id="lastSyncMsg" class="last-sync">Last Sync: Never</p>
             <div class="footer-links">
-                <a href="https://github.com/BXZ1/raindrop-importer" target="_blank">By BXZ1</a> •
-                <a href="https://github.com/BXZ1/raindrop-importer/discussions" target="_blank">Feedback</a>
+                <a href="https://github.com/BXZ1/raindrop-sync-firefox" target="_blank">By BXZ1</a> •
+                <a href="https://github.com/BXZ1/raindrop-sync-firefox/discussions" target="_blank">Feedback</a>
             </div>
         </footer>
     </div>
