--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,7 @@
                 <div class="form-group">
                     <label for="apiToken">API Token</label>
                     <input type="password" id="apiToken" placeholder="Paste your Test Token here">
+                    <small id="tokenStatus" class="helper-text"></small>
                 </div>
                 <div class="form-group">
                     <label for="targetFolder">Target Firefox Folder</label>
@@ -37,6 +38,9 @@
                     <label for="syncInterval">Auto-Sync Frequency</label>
                     <select id="syncInterval" class="sync-select">
                         <option value="0">🚫 Off (Manual)</option>
+                        <option value="120">⏰ 2 Hours</option>
+                        <option value="360">⏰ 6 Hours</option>
+                        <option value="720">⏰ 12 Hours</option>
                         <option value="1440">📅 Daily</option>
                         <option value="4320">📅 Every 3 Days</option>
                         <option value="10080">📆 Weekly</option>
@@ -61,14 +65,14 @@
             <div class="input-area">
                 <div class="form-group" id="collectionInputGroup">
                     <label for="configValueCollection">Collection Name(s)</label>
-                    <input type="text" id="configValueCollection" placeholder="Bookmarks, Recipes, Work"
+                    <input type="text" id="configValueCollection" placeholder="Bookmarks, Tech Tips, Work"
                         value="Bookmarks">
-                    <small class="input-helper">Separate multiple with commas (e.g. A, B)</small>
+                    <small class="input-helper">Multiple collections allowed (e.g. Bookmarks, Tech Tips)</small>
                 </div>
                 <div class="form-group" id="tagInputGroup" style="display: none;">
                     <label for="configValueTag">Tag Name(s)</label>
                     <input type="text" id="configValueTag" placeholder="firefox, tech tips, news" value="firefox">
-                    <small class="input-helper">Multiple tags/spaces allowed (e.g. tag1, tag 2)</small>
+                    <small class="input-helper">Multiple tags allowed (e.g. firefox, tech tips)</small>
                 </div>
 
                 <!-- Flatten Option -->
@@ -89,7 +93,7 @@
 
             <!-- Action Area -->
             <button id="importBtn" class="import-btn">
-                <span>Start Import</span>
+                <span>Sync Now</span>
             </button>
 
             <!-- Status Feedback -->
